--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
                 <version>1.0.20</version>
             </dependency>
 			
+	<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 
